Minor code improvements for exercise 3